[project]
name = "mdf-python-streamdiffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.17"
dependencies = [
    "diffusers==0.29.0",
    "ndi-python==5.1.1.1",
    "onnx-graphsurgeon>=0.5.8",
    "opencv-python>=4.11.0.86",
    "python-osc>=1.9.3",
    "pywin32>=310",
    "six>=1.17.0",
    "torch",
    "torchvision",
    "transformers>=4.51.3",
    "xformers>=0.0.30",
    "accelerate",
    "fire",
    "omegaconf",
    "cuda-python",
    "onnx",
    "onnxruntime",
    "protobuf",
    "colored"
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
